cmake_minimum_required(VERSION 3.13)
project(hello)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 1-两数之和.cpp)
add_executable(2 2-两数相加.cpp)
add_executable(3 3-无重复字符的最长子串.cpp)
add_executable(4 4-寻找两个有序数组的中位数.cpp)
add_executable(7 7-整数反转.cpp)
add_executable(9 9-回文数.cpp)
add_executable(13 13-罗马数字转整数.cpp)
add_executable(14 14-最长公共前缀.cpp)
add_executable(20 20-有效的括号.cpp)
add_executable(21 21-合并两个有序链表.cpp)
add_executable(26 26-删除排序数组中的重复项.cpp)
add_executable(27 27-移除元素.cpp)
add_executable(28 28-实现strStr.cpp)
add_executable(35 35-搜索插入位置.cpp)
add_executable(38 38-报数.cpp)
add_executable(53 53-最大子序和.cpp)
add_executable(58 58-最后一个单词的长度.cpp)
add_executable(66 66-加一.cpp)
add_executable(76 76-二进制求和.cpp)